# BasicVCodec

./: CMakeLists.txt  README.md
src/: common.h  csc.cpp  csc.h  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  entropy.h  frame.cpp  frame.hpp  interPred.cpp  interPred.h  intraPred.cpp  intraPred.h  macroblock.cpp  macroblock.h  main.cpp  predCoding.cpp  predCoding.h  qualityMetrics.cpp  qualityMetrics.h  rateDistortion.h  slice.cpp  slice.h  syntax.cpp  syntax.h  tga.cpp  tga.h  transform.cpp  transform.h
